# grpc-boilerplate

./: .gitignore  README.md
src/cpp/: meson.build
src/cpp/client/sync/: BoilerplateClient.cc  BoilerplateClient.h  main.cc  meson.build
src/cpp/common/: Logger.h
src/cpp/server/async/: AsyncRPCManager.cc  AsyncRPCManager.h  AsyncServer.cc  AsyncServer.h  StreamRequestManager.cc  StreamRequestManager.h  UnaryRequestManager.cc  UnaryRequestManager.h  main.cc  meson.build
src/cpp/server/sync/: BoilerplateService.cc  BoilerplateService.h  SyncServer.cc  SyncServer.h  main.cc  meson.build
src/cpp/subprojects/: .gitignore
src/proto/: boiler.proto
